# pkg/api/oas_unimplemented_gen.go
@@ -42,10 +42,10 @@ func (UnimplementedHandler) AuthMe(ctx context.Context) (r *User, _ error) {
 
 // Cat implements cat operation.
 //
-// Read file contents.
+// Read file contents (POSIX open(O_RDONLY)).
 //
 // GET /v1/drives/{driveID}/fs/cat
-func (UnimplementedHandler) Cat(ctx context.Context, params CatParams) (r CatOK, _ error) {
+func (UnimplementedHandler) Cat(ctx context.Context, params CatParams) (r CatRes, _ error) {
 	return r, ht.ErrNotImplemented
 }
 
@@ -123,7 +123,7 @@ func (UnimplementedHandler) GoogleNativeLogin(ctx context.Context, req OptGoogle
 
 // Hardlink implements hardlink operation.
 //
-// Create a hard link (POSIX ln(1)).
+// Create a hard link (POSIX link(2)).
 //
 // POST /v1/drives/{driveID}/fs/hardlink
 func (UnimplementedHandler) Hardlink(ctx context.Context, req OptHardlinkReq, params HardlinkParams) (r HardlinkRes, _ error) {
@@ -168,10 +168,10 @@ func (UnimplementedHandler) ListDrives(ctx context.Context) (r []Drive, _ error)
 
 // Ls implements ls operation.
 //
-// List directory contents.
+// List directory contents (POSIX opendir/readdir).
 //
 // GET /v1/drives/{driveID}/fs/ls
-func (UnimplementedHandler) Ls(ctx context.Context, params LsParams) (r *DirContent, _ error) {
+func (UnimplementedHandler) Ls(ctx context.Context, params LsParams) (r LsRes, _ error) {
 	return r, ht.ErrNotImplemented
 }
 
@@ -186,11 +186,11 @@ func (UnimplementedHandler) Lstat(ctx context.Context, params LstatParams) (r Ls
 
 // Mkdir implements mkdir operation.
 //
-// Create a directory.
+// Create a directory (POSIX mkdir(2)).
 //
 // POST /v1/drives/{driveID}/fs/mkdir
-func (UnimplementedHandler) Mkdir(ctx context.Context, req OptMkdirReq, params MkdirParams) error {
-	return ht.ErrNotImplemented
+func (UnimplementedHandler) Mkdir(ctx context.Context, req OptMkdirReq, params MkdirParams) (r MkdirRes, _ error) {
+	return r, ht.ErrNotImplemented
 }
 
 // Mount implements mount operation.
@@ -204,11 +204,11 @@ func (UnimplementedHandler) Mount(ctx context.Context, req OptMountReq, params M
 
 // Mv implements mv operation.
 //
-// Move files or directories.
+// Move files or directories (POSIX rename(2)).
 //
 // POST /v1/drives/{driveID}/fs/mv
-func (UnimplementedHandler) Mv(ctx context.Context, req OptMvReq, params MvParams) error {
-	return ht.ErrNotImplemented
+func (UnimplementedHandler) Mv(ctx context.Context, req OptMvReq, params MvParams) (r MvRes, _ error) {
+	return r, ht.ErrNotImplemented
 }
 
 // PresignDownload implements presignDownload operation.
@@ -225,7 +225,16 @@ func (UnimplementedHandler) PresignDownload(ctx context.Context, params PresignD
 // Read a symbolic link's target (POSIX readlink(2)).
 //
 // GET /v1/drives/{driveID}/fs/readlink
-func (UnimplementedHandler) Readlink(ctx context.Context, params ReadlinkParams) (r *ReadlinkOK, _ error) {
+func (UnimplementedHandler) Readlink(ctx context.Context, params ReadlinkParams) (r ReadlinkRes, _ error) {
+	return r, ht.ErrNotImplemented
+}
+
+// Realpath implements realpath operation.
+//
+// Resolve all symlinks and return the canonical (driveID, path) pair (POSIX realpath(3)).
+//
+// GET /v1/drives/{driveID}/fs/realpath
+func (UnimplementedHandler) Realpath(ctx context.Context, params RealpathParams) (r RealpathRes, _ error) {
 	return r, ht.ErrNotImplemented
 }
 
@@ -240,16 +249,16 @@ func (UnimplementedHandler) RestoreDrive(ctx context.Context, params RestoreDriv
 
 // Rm implements rm operation.
 //
-// Remove files or directories.
+// Remove files or directories (POSIX unlink/rmdir(2)).
 //
 // DELETE /v1/drives/{driveID}/fs
-func (UnimplementedHandler) Rm(ctx context.Context, req OptRmReq, params RmParams) error {
-	return ht.ErrNotImplemented
+func (UnimplementedHandler) Rm(ctx context.Context, req OptRmReq, params RmParams) (r RmRes, _ error) {
+	return r, ht.ErrNotImplemented
 }
 
 // Stat implements stat operation.
 //
-// Get file metadata (follows symlinks, POSIX stat(2)).
+// Get file metadata, following symlinks (POSIX stat(2)).
 //
 // GET /v1/drives/{driveID}/fs/stat
 func (UnimplementedHandler) Stat(ctx context.Context, params StatParams) (r StatRes, _ error) {
@@ -258,7 +267,7 @@ func (UnimplementedHandler) Stat(ctx context.Context, params StatParams) (r Stat
 
 // Symlink implements symlink operation.
 //
-// Create a symbolic link.
+// Create a symbolic link (POSIX symlink(2)).
 //
 // POST /v1/drives/{driveID}/fs/symlink
 func (UnimplementedHandler) Symlink(ctx context.Context, req OptSymlinkReq, params SymlinkParams) (r SymlinkRes, _ error) {
@@ -267,11 +276,11 @@ func (UnimplementedHandler) Symlink(ctx context.Context, req OptSymlinkReq, para
 
 // Touch implements touch operation.
 //
-// Create an empty file.
+// Create an empty file (POSIX open(O_CREAT)).
 //
 // POST /v1/drives/{driveID}/fs/touch
-func (UnimplementedHandler) Touch(ctx context.Context, req OptTouchReq, params TouchParams) error {
-	return ht.ErrNotImplemented
+func (UnimplementedHandler) Touch(ctx context.Context, req OptTouchReq, params TouchParams) (r TouchRes, _ error) {
+	return r, ht.ErrNotImplemented
 }
 
 // Unmount implements unmount operation.
@@ -306,8 +315,8 @@ func (UnimplementedHandler) UpsertUser(ctx context.Context, req OptUpsertUserReq
 // Write inline content to a file.
 //
 // PUT /v1/drives/{driveID}/fs/write
-func (UnimplementedHandler) Write(ctx context.Context, req OptWriteReq, params WriteParams) error {
-	return ht.ErrNotImplemented
+func (UnimplementedHandler) Write(ctx context.Context, req OptWriteReq, params WriteParams) (r WriteRes, _ error) {
+	return r, ht.ErrNotImplemented
 }
 
 // WriteLarge implements writeLarge operation.
